# iot-image

./: .claude.md  .gitignore  Cargo.toml  README.md  flash.sh
.github/: copilot-instructions.md
assets/static/fill-svg-static/: LICENSE  not-used.txt
assets/static/fonts/: Roboto-Regular-Dashed.sfd
client/: README.md  arduino_secrets.h.template  client.ino  config.h
deploy/: deploy_server.sh
deploy/bundle/: README.md  env.txt.example  install.sh  iot-image-server.service
server/: Cargo.toml
server/src/: bitmap.rs  fred.rs  kalman.rs  main.rs  stocks.rs  svg_common.rs  weather.rs  weight.rs
src/: main.rs
