[package]
name = "iot-image-server"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"

[dependencies]
chrono = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4", features = ["derive"] }
axum = "0.7"
resvg = "0.44"
usvg = "0.44"
tiny-skia = "0.11"
base64 = "0.22"
reverse_geocoder = "4.0"
csv = "1.3"

[profile.release]
lto = true
strip = true
opt-level = "z"
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
